<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/hoja_inferior_titulo_cronometro"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/md_theme_secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnClose"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_close"
                app:iconSize="32dp"
                android:contentDescription="@string/hoja_inferior_ic_cerrar_desc"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWorkingTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hoja_inferior_titulo_tiempo_trabajo"
                app:helperText="@string/hoja_inferior_ayuda_tiempo_trabajo"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="488dp"
                app:suffixText="min">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietWorkingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBreakTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hoja_inferior_titulo_tiempo_descanso"
                app:helperText="@string/hoja_inferior_ayuda_tiempo_descanso"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="488dp"
                app:suffixText="min">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietBreakTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="32dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:enabled="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/hoja_inferior_boton_confirmar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="488dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>