<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/bsdhNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/hoja_inferior_titulo_notificacion"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/md_theme_secondary"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hoja_inferior_cuerpo_notificacion"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:breakStrategy="balanced"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinuar"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:text="@string/hoja_inferior_boton_notificacion"
            tools:ignore="VisualLintButtonSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>