<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FiltroHoyFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:columnCount="3"
            app:rowCount="4">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcdContenedorObjetivoDiario"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cardElevation="3dp"
                app:layout_columnSpan="3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_ren_hoy_card_1_titulo"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        android:textColor="?attr/colorPrimary" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.google.android.material.progressindicator.CircularProgressIndicator
                                android:id="@+id/pciAnvaceRealizado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:indicatorSize="90dp"
                                app:trackCornerRadius="8dp"
                                app:trackThickness="8dp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvProgreso"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/frag_ren_hoy_card_1_porc_avance"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <View
                            android:layout_width="6dp"
                            android:layout_height="match_parent" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvObjetivoTrabajo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:breakStrategy="balanced"
                                android:text="@string/frag_ren_hoy_card_1_cont_text_1"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvObjetivoRealizado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_ren_hoy_card_1_cont_text_2"
                                android:textAppearance="?attr/textAppearanceBodySmall" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="6dp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvMensajeObjetivo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_ren_hoy_card_1_cont_text_3"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcdContenedorProductividadDiaria"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_ren_hoy_card_2_titulo"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        android:textColor="?attr/colorPrimary" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:padding="2dp"
                            android:src="@drawable/ic_productivity_time" />

                        <View
                            android:layout_width="12dp"
                            android:layout_height="match_parent" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:breakStrategy="balanced"
                                android:text="@string/frag_ren_hoy_card_2_cont_text_1"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvProductividadRealizado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_ren_hoy_card_2_cont_text_2"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="6dp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_ren_hoy_card_2_cont_text_3"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="16dp"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="0dp"
                android:layout_height="180dp"
                app:layout_columnWeight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_coffee_break" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/frag_ren_hoy_card_3_titulo"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDescansoRealizado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:breakStrategy="balanced"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/frag_ren_hoy_card_3_cont_text_1"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="0dp"
                android:layout_height="180dp"
                app:layout_columnWeight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_balance" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/frag_ren_hoy_card_4_titulo"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSesionesRealizados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:breakStrategy="balanced"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/frag_ren_hoy_card_4_cont_text_1"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="16dp"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            android:text="@string/frag_ren_hoy_sec_mis_sesiones"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:attr/textColorSecondary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoHayDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_datos"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?android:attr/textColorSecondary" />

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSesionesHoy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>